# evolve-launcher

./: .gitignore  BUILDING.md  CONTRIBUTING.md  package.json  pnpm-lock.yaml
.github/workflows/: determine-and-patch-release-version.ts  tauri-build.yml
docs/superpowers/plans/: 2026-06-13-evolve-launcher-plan.md  2026-06-13-evolve-server-plan.md  2026-06-14-steam-sdr-integration.md  2026-06-14-stun-nat-traversal.md
docs/superpowers/specs/: 2026-06-13-evolve-server-launcher-design.md  (+1 more)
evolve-launcher/: index.html  package.json  test_kando.py  tsconfig.json  vite.config.ts
evolve-launcher/src/: App.svelte  app.css  types.ts
evolve-launcher/src-tauri/: Cargo.toml
evolve-launcher/src-tauri/.cargo/: config.toml
evolve-launcher/src-tauri/src/: commands.rs  config.rs  donor.rs  downloader.rs  install.rs  lib.rs  local_server.rs  main.rs  nat.rs  patcher.rs  pinenut_grants.json  steam.rs
evolve-server/: Makefile
evolve-server/certs/: .gitignore  ca.crt
evolve-server/pinenut_responses/: applogon_locale.json  check_app_ownership.json  doorman.json  entitlements_grants.json  sso_login.json  storefront.json  telemetry_stats.json
evolve-server/scripts/: test-game.sh
src/: App.svelte  app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.template
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  donor.rs  downloader.rs  install.rs  lib.rs  local_server.rs  nat.rs  patcher.rs  steam.rs
src/lib/: InstallView.svelte  Main.svelte  ProgressView.svelte  Settings.svelte  SteamSetupView.svelte
(+15 files in other folders)
