[package]
name = "evolve-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "evolve_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "net"] }
sha2 = "0.10"
futures = "0.3"
hex = "0.4"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
strip = true
